# Path-Climate-predictor

./: .gitignore  .replit  LICENSE  README.md  pyproject.toml  replit.md
attached_assets/: Pasted--I-want-you-to-generate-a-complete-production-ready-full-stack-project-called-PathPre-1759247016932_1759247016933.txt
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/ml/: prophet_model.py  severity_score.py
backend/app/routes/: forecast.py  geocoding.py  planner.py  recommend.py
backend/app/utils/: geocoding.py  open_meteo.py  openmeteo_api.py  osmnx_wrapper.py  segmenter.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.jsx  index.css  theme.js  theme.jsx
frontend/src/api/: backend.js
frontend/src/components/: AlertsPanel.css  AlertsPanel.jsx  Autocomplete.jsx  Autocomplete.module.css  Button.jsx  Button.module.css  Card.jsx  Card.module.css  Input.module.css  Layout.jsx  Layout.module.css  MapView.css  MapView.jsx  Skeleton.css  Skeleton.jsx  Timeline.css  Timeline.jsx
frontend/src/pages/: Home.css  Home.jsx  Home.module.css
